--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-SQL/PLSQL/*.sql linguist-language=PLSQL
-SQL/PLSQL/*/*.sql linguist-language=PLSQL
+*.sql linguist-language=SQL
+*.prc linguist-language=SQL
+*.fnc linguist-language=SQL
