--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+$ cat .gitattributes
 *.sql linguist-language=SQL
 *.prc linguist-language=SQL
 *.fnc linguist-language=SQL
