--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,11 @@
 # Auto detect text files and perform LF normalization
+
 * text=auto
 
-$ cat .gitattributes
 *.sql linguist-language=SQL
 *.prc linguist-language=SQL
 *.fnc linguist-language=SQL
+*.sql linguist-detectable=true
+*.prc linguist-detectable=true
+*.fnc linguist-detectable=true
+
