--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+* linguist-vendored
 * text=auto
 *.sql linguist-vendored=false
 *.prc linguist-vendored=false
@@ -5,3 +6,6 @@
 *.sql linguist-language=SQL
 *.prc linguist-language=SQL
 *.fnc linguist-language=SQL
+*.sql linguist-detectable=true
+*.prc linguist-detectable=true
+*.fnc linguist-detectable=true
