--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,9 @@
-* linguist-vendored
+SQL/PLSQL/* linguist-vendored
 * text=auto
-*.sql linguist-vendored=false
-*.prc linguist-vendored=false
-*.fnc linguist-vendored=false
+
 *.sql linguist-language=SQL
 *.prc linguist-language=SQL
 *.fnc linguist-language=SQL
 *.sql linguist-detectable=true
 *.prc linguist-detectable=true
 *.fnc linguist-detectable=true
-*.c linguist-language=C
