--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 * text=auto
+*.sql linguist-language=SQL
+*.prc linguist-language=SQL
+*.fnc linguist-language=SQL
 *.sql linguist-detectable=true
+*.prc linguist-detectable=true
+*.fnc linguist-detectable=true
