--- a/C++/DataStructures/DataStructures/DataStructures.vcxproj
+++ b/C++/DataStructures/DataStructures/DataStructures.vcxproj
@@ -143,19 +143,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="SinglyLinkedList.hpp" />
+    <ClInclude Include="Headers\SinglyLinkedList.hpp" />
+    <ClInclude Include="Headers\targetver.h" />
+    <ClInclude Include="Headers\SinglyLinkedList.hpp" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DataStructures.cpp" />
-    <ClCompile Include="SinglyLinkedList.cpp" />
+    <ClCompile Include="Structures\SinglyLinkedList.cpp" />
     <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Tests\SinglyLinkedListTests.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
