--- a/DataStructures/DataStructures/DataStructures.vcxproj
+++ b/DataStructures/DataStructures/DataStructures.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="C\Headers\SinglyLinkedList.h" />
     <ClInclude Include="Headers\DoublyLinkedList.hpp" />
     <ClInclude Include="Headers\DoublyLinkedListTests.hpp" />
     <ClInclude Include="Headers\SinglyLinkedList.hpp" />
@@ -151,6 +152,12 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="C\Structures\SinglyLinkedList.c">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="DataStructures.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -162,6 +169,9 @@
     <ClCompile Include="Structures\SinglyLinkedList.cpp" />
     <ClCompile Include="Tests\DoublyLinkedListTests.cpp" />
     <ClCompile Include="Tests\SinglyLinkedListTests.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Instructions.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
