More Sorting Algorithms
Selection Sort and Insertion Sort

--- a/DataStructures/DataStructures/DataStructures.vcxproj
+++ b/DataStructures/DataStructures/DataStructures.vcxproj
@@ -178,6 +178,9 @@
     <ClCompile Include="C\Tests\CSinglyLinkedListTests.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="C\Tests\CSortingTests.c">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="DataStructures.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
