--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ DataStructures/.vs/
 .vscode
 /Java/2019/OOP1/App1/nbproject/private/
 /Java/2019/OOP1/App1/build/
+/Java/2019/OOP1/App1/dist/
+/Java/2019/OOP1/App2/nbproject/private/
+/Java/2019/OOP1/App2/build/
+/Java/2019/OOP1/App2/dist/
