--- a/Java/2019/OOP1/BigThinTall/nbproject/project.properties
+++ b/Java/2019/OOP1/BigThinTall/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/BigThinTall.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.16.jar=lib\\mysql-connector-java-8.0.16.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
