--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ DataStructures/.vs/
 /Java/2019/OOP1/BigThinTall/nbproject/private/
 /Java/2019/OOP1/BigThinTall/build/
 /Java/2019/OOP1/BigThinTall/dist/
+/Java/2019/OOP1/MessageEvent/nbproject/private/
+/Java/2019/OOP1/MessageEvent/build/
+/Java/2019/OOP1/MouseEvents/nbproject/private/
+/Java/2019/OOP1/MouseEvents/build/
