--- a/Java/2019/OOP1/BigThinTall/nbproject/project.properties
+++ b/Java/2019/OOP1/BigThinTall/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.mysql-connector-java-8.0.16.jar=lib\\mysql-connector-java-8.0.16.
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.16.jar}
+    ${file.reference.mysql-connector-java-8.0.16.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
