Fast forward java

--- a/Java/2019/OOP2/CRUD/nbproject/project.properties
+++ b/Java/2019/OOP2/CRUD/nbproject/project.properties
@@ -28,13 +28,14 @@ dist.jar=${dist.dir}/CRUD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.16.jar=lib/mysql-connector-java-8.0.16.jar
+file.reference.mysql-connector-java-8.0.17.jar=..\\CRUDSakila\\lib\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.16.jar}
+    ${file.reference.mysql-connector-java-8.0.16.jar}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
