--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ DataStructures/.vs/
 /Java/2019/OOP2/CRUD_Singleton/nbproject/private/
 /Java/2019/OOP2/CRUD/nbproject/private/
 /Java/2019/OOP2/CRUD/build/
+/Java/2019/OOP2/Translatorum/nbproject/private/
+/Java/2019/OOP2/Translatorum/build/
