Translatorum Language CRUD

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ DataStructures/.vs/
 /Java/2019/OOP2/CRUD/build/
 /Java/2019/OOP2/Translatorum/nbproject/private/
 /Java/2019/OOP2/Translatorum/build/
+/Java/2019/OOP2/Translatorum/dist/
