--- a/Java/2019/OOP2/Translatorum/nbproject/project.properties
+++ b/Java/2019/OOP2/Translatorum/nbproject/project.properties
@@ -42,9 +42,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.struts.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.struts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
