Translatorum - Validação no front end e nova pagina de erro

--- a/Java/2019/OOP2/Translatorum/nbproject/project.properties
+++ b/Java/2019/OOP2/Translatorum/nbproject/project.properties
@@ -42,9 +42,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
+    ${libs.struts.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.struts.classpath}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,9 +71,9 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.license=mit
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
