--- a/Java/2019/OOP2/Translatorum/src/java/eep/as/leoven/resources/ApplicationResource.properties
+++ b/Java/2019/OOP2/Translatorum/src/java/eep/as/leoven/resources/ApplicationResource.properties
@@ -66,3 +66,4 @@ welcome.heading=Struts Applications in Netbeans!
 welcome.message=It's easy to create Struts applications with NetBeans.
 
 error.languageName.required=Language name is required.
+error.exception=Something went wrong!
