--- a/C/2020/dist_sist/Makefile
+++ b/C/2020/dist_sist/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 INCLUDE = ../../../../C-Macro-Collections/src
 CFLAGS = -Wall
 BUILD = ./build
-LINKLIB =
+LINKLIB = -pthread
 DEFINES = -DCMC_LOG_COLOR -DCMC_TEST_COLOR
 
 .PHONY main: server.exe client.exe tests.exe
