--- a/C/2020/dist_sist/Makefile
+++ b/C/2020/dist_sist/Makefile
@@ -7,13 +7,13 @@ DEFINES = -DCMC_LOG_COLOR -DCMC_TEST_COLOR
 
 .PHONY main: server.exe client.exe tests.exe
 
-server.exe: $(BUILD)/messages.o $(BUILD)/server.o $(BUILD)/netapi.o
+server.exe: $(BUILD)/messages.o $(BUILD)/server.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o
 	$(CC) $^ -o $@ $(LINKLIB)
 
-client.exe: $(BUILD)/messages.o $(BUILD)/client.o $(BUILD)/netapi.o
+client.exe: $(BUILD)/messages.o $(BUILD)/client.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o
 	$(CC) $^ -o $@ $(LINKLIB)
 
-tests.exe: $(BUILD)/messages.o $(BUILD)/tests.o $(BUILD)/netapi.o
+tests.exe: $(BUILD)/messages.o $(BUILD)/tests.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o
 	$(CC) $^ -o $@ $(LINKLIB)
 
 $(BUILD)/server.o: server.c build_dir
@@ -29,6 +29,12 @@ $(BUILD)/netapi.o: netapi.c netapi.h build_dir
 	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
 
 $(BUILD)/messages.o: messages.c messages.h build_dir
+	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+
+$(BUILD)/collections.o: collections.c collections.h build_dir
+	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+
+$(BUILD)/mail.o: mail.c mail.h build_dir
 	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
 
 .PHONY build_dir:
