Reorganizing project with src/include

--- a/C/2020/dist_sist/Makefile
+++ b/C/2020/dist_sist/Makefile
@@ -1,9 +1,11 @@
 CC = gcc
-INCLUDE = ../../../../C-Macro-Collections/src
+INCLUDE = -I ../../../../C-Macro-Collections/src -I ./include
 CFLAGS = -Wall --std=c11
 BUILD = ./build
 LINKLIB = -pthread
 DEFINES = -DCMC_LOG_COLOR -DCMC_TEST_COLOR
+SRC_DIR = ./src
+INCLUDE_DIR = ./include
 
 .PHONY main: server.exe client.exe tests.exe
 
@@ -16,26 +18,26 @@ client.exe: $(BUILD)/messages.o $(BUILD)/client.o $(BUILD)/netapi.o $(BUILD)/col
 tests.exe: $(BUILD)/messages.o $(BUILD)/tests.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o
 	$(CC) $^ -o $@ $(LINKLIB)
 
-$(BUILD)/server.o: server.c build_dir
-	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+$(BUILD)/server.o: $(SRC_DIR)/server.c build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/client.o: client.c build_dir
-	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+$(BUILD)/client.o: $(SRC_DIR)/client.c build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/tests.o: tests.c build_dir
-	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+$(BUILD)/tests.o: $(SRC_DIR)/tests.c build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/netapi.o: netapi.c netapi.h build_dir
-	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+$(BUILD)/netapi.o: $(SRC_DIR)/netapi.c $(INCLUDE_DIR)/netapi.h build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/messages.o: messages.c messages.h build_dir
-	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+$(BUILD)/messages.o: $(SRC_DIR)/messages.c $(INCLUDE_DIR)/messages.h build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/collections.o: collections.c collections.h build_dir
-	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+$(BUILD)/collections.o: $(SRC_DIR)/collections.c $(INCLUDE_DIR)/collections.h build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/mail.o: mail.c mail.h build_dir
-	$(CC) -c $< -o $@ -I $(INCLUDE) $(CFLAGS) $(DEFINES)
+$(BUILD)/mail.o: $(SRC_DIR)/mail.c $(INCLUDE_DIR)/mail.h build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
 .PHONY build_dir:
 	mkdir -p $(BUILD)
