Database save/load

--- a/C/2020/dist_sist/Makefile
+++ b/C/2020/dist_sist/Makefile
@@ -9,13 +9,13 @@ INCLUDE_DIR = ./include
 
 .PHONY main: server.exe client.exe tests.exe
 
-server.exe: $(BUILD)/messages.o $(BUILD)/server.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o
+server.exe: $(BUILD)/messages.o $(BUILD)/server.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o $(BUILD)/database.o
 	$(CC) $^ -o $@ $(LINKLIB)
 
-client.exe: $(BUILD)/messages.o $(BUILD)/client.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o
+client.exe: $(BUILD)/messages.o $(BUILD)/client.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o $(BUILD)/database.o
 	$(CC) $^ -o $@ $(LINKLIB)
 
-tests.exe: $(BUILD)/messages.o $(BUILD)/tests.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o
+tests.exe: $(BUILD)/messages.o $(BUILD)/tests.o $(BUILD)/netapi.o $(BUILD)/collections.o $(BUILD)/mail.o $(BUILD)/database.o
 	$(CC) $^ -o $@ $(LINKLIB)
 
 $(BUILD)/server.o: $(SRC_DIR)/server.c build_dir
@@ -27,16 +27,19 @@ $(BUILD)/client.o: $(SRC_DIR)/client.c build_dir
 $(BUILD)/tests.o: $(SRC_DIR)/tests.c build_dir
 	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/netapi.o: $(SRC_DIR)/netapi.c $(INCLUDE_DIR)/netapi.h build_dir
+$(BUILD)/collections.o: $(SRC_DIR)/collections.c $(INCLUDE_DIR)/collections.h build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
+
+$(BUILD)/database.o: $(SRC_DIR)/database.c $(INCLUDE_DIR)/database.h build_dir
+	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
+
+$(BUILD)/mail.o: $(SRC_DIR)/mail.c $(INCLUDE_DIR)/mail.h build_dir
 	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
 $(BUILD)/messages.o: $(SRC_DIR)/messages.c $(INCLUDE_DIR)/messages.h build_dir
 	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
-$(BUILD)/collections.o: $(SRC_DIR)/collections.c $(INCLUDE_DIR)/collections.h build_dir
-	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
-
-$(BUILD)/mail.o: $(SRC_DIR)/mail.c $(INCLUDE_DIR)/mail.h build_dir
+$(BUILD)/netapi.o: $(SRC_DIR)/netapi.c $(INCLUDE_DIR)/netapi.h build_dir
 	$(CC) -c $< -o $@ $(INCLUDE) $(CFLAGS) $(DEFINES)
 
 .PHONY build_dir:
