Bundled CMC lib

--- a/C/2020/dist_sist/Makefile
+++ b/C/2020/dist_sist/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-INCLUDE = -I ../../../../C-Macro-Collections/src -I ./include
+INCLUDE = -I ./lib/cmc -I ./include
 CFLAGS = -Wall --std=c11
 BUILD = ./build
 LINKLIB = -pthread
