--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ DataStructures/.vs/
 /Java/2019/OOP2/Translatorum/nbproject/private/
 /Java/2019/OOP2/Translatorum/build/
 /Java/2019/OOP2/Translatorum/dist/
+
+tf_model
