dir_size with async

--- a/Rust/2021/dir_size/Cargo.toml
+++ b/Rust/2021/dir_size/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 
 [dependencies]
 humansize = "1"
+tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1.5", features = ["fs"] }
+futures = "0.3.13"
